[package]
name = "clag"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
getopts = "0.2"
dropshot = "0.3.0"
anyhow = "1"
tokio = { version = "0.2", features = ["full"] }
slog = "2.5"
schemars = { version = "0.7", features = [ "chrono", "uuid" ] }
hyper = "0.13"
rusoto_core = "0.45.0"
rusoto_ec2 = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_credential = "0.45.0"
toml = "0.5"

#
# I believe it is necessary to pull this in here, so that we can demand the
# static linking of the vendored OpenSSL.  We don't use it directly, but the
# same version will then be used by reqwest.
#
openssl = { version = "0.10", optional = true }
