[package]
name = "clag"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
getopts = "0.2"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", rev = "538e99b7997f17addbddb6fa417281bd9ee28a94" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
slog = "2.5"
schemars = { version = "0.8", features = [ "chrono", "uuid" ] }
hyper = "0.14"
rusoto_core = "0.48.0"
rusoto_ec2 = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
toml = "0.5"

#
# I believe it is necessary to pull this in here, so that we can demand the
# static linking of the vendored OpenSSL.  We don't use it directly, but the
# same version will then be used by reqwest.
#
openssl = { version = "0.10", optional = true }
